--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container mx-auto px-6">
       <h2 class="text-3xl md:text-4xl font-extrabold mb-4">Essayez Quick CRH gratuitement</h2>
       <p class="text-slate-600 mb-8">3 CRH gratuits sans inscription. Lancez la vraie démo hébergée en ligne.</p>
-      <a href="https://quick-crh-mvp.streamlit.app" target="_blank" class="px-6 py-3 rounded-xl bg-blue-700 text-white font-semibold hover:bg-blue-800 shadow-soft">Lancer la démo</a>
+      <a href="https://quick-crh-mvp-7hcz7kemvzcwerhgz2f9hy.streamlit.app" target="_blank" class="px-6 py-3 rounded-xl bg-blue-700 text-white font-semibold hover:bg-blue-800 shadow-soft">Lancer la démo</a>
     </div>
   </section>
 
